[package]
name = "json-stream"
version = "0.1.0"
edition = "2021"
authors = ["d0nut <d0nut@resync.gg>"]
license = "LICENSE.txt"
readme = "README.md"
homepage = "https://resync.gg"
repository = "https://github.com/resyncgg/json-stream"
description = "A library to parse Newline Delimited JSON values from a byte stream"
keywords = ["json", "stream", "ndjson", "jsonl", "axum"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pin-project = "1.1"
tracing = "0.1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
criterion = { version = "0.4", features = ["async_tokio"] }

[[bench]]
name = "json_stream"
harness = false